# cource_workhome6

./: pyproject.toml
skymarket/ads/: admin.py  models.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_alter_ad_image.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: email.py  models.py  urls.py
skymarket/users/migrations/: 0001_initial.py  0002_alter_user_image.py
